--- a/.github/workflows/github-actions-ec2.yml
+++ b/.github/workflows/github-actions-ec2.yml
@@ -1,34 +1,37 @@
-name: Push-to-EC2
+name: CI/CD Pipeline
 
 on:
   push:
     branches: [main]
 
 jobs:
-  deploy:
-    name: Deploy to Server
+  build:
+    name: Build and Test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the files
         uses: actions/checkout@v2
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
         with:
-          python-version: '3.9'
+          node-version: '16'
 
       - name: Install dependencies
         run: |
-          pip install requests
+          npm install --save-dev jest
 
-      - name: Run HTML Validation
+      - name: Run Tests
         run: |
-          python check.py index.html
+          npm test
 
-      - name: Run CSS Validation
-        run: |
-          npm install -g stylelint stylelint-config-standard
-          stylelint styles.css
+  deploy:
+    name: Deploy to Server
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout the files
+        uses: actions/checkout@v2
 
       - name: Deploy to Server
         uses: easingthemes/actions-deploy@main
